--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#two">Logistics</a></li>
+						<li><a href="#three">Schedule</a></li>
+						<li><a href="#four"> About</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -53,20 +53,26 @@
 								<div class="container">
 									<header class="major">
 										<h2>CS+Social Good</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<p>Fall 2015-16<br />
+										Monday, Wednesday, Friday 1:30 - 2:20 pm</a>.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>Learn web technologies by working on real world projects focused on creating positive social impact. The class will cover basic topics related to web development and provide resources for more advanced learning. Students will work on small teams to implement high-impact projects for partner organizations. The aim of this class is to to empower students to leverage technology for social good by inspiring action, facilitating collaboration, and forging pathways toward change.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>Logistics</h3>
+                                    <p> <b>Recommended prerequisite: </b> <br> CS106B. Students are expected to have prior programming experience but web application experience (eg, CS142) is not mandatory. The class is open to students of all years.
+
+                                        <br> 
+                                        <br> 
+                                        
+                                        <b> Enrollment requirements: </b> <br>Students are required to submit an application and attend the first class.
+</p> 
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
+										<li class="fa-code"></li>
 										<li class="fa-cubes">Stack small boxes</li>
 										<li class="fa-book">Read books and stuff</li>
 										<li class="fa-coffee">Drink much coffee</li>
