--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/cs90si" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/cs4good" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -52,7 +49,7 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>CS 90SI</h2>
+										<h2>CS 90SI : CS+Social Good</h2>
 										<p>Fall 2015-16<br />
 										Monday, Wednesday, Friday 1:30 - 2:20 pm</a>.</p>
 									</header>
@@ -99,34 +96,11 @@ will be roughly 3 hours a week, comprised of individual learning, work, and team
 							<section id="three">
 								<div class="container">
 									<h3>Schedule</h3>
-                                    <p> The class syllabus and project list will be posted here soon. 
+                                    <p> The class syllabus and project list will be posted here soon.       We would like to thank the previous instructors of CS 90SI - Angad Singh, Jeff Jacobs and Lilli Oetting for allowing us to use their amazing material. 
+ 
                                         <br> 
                                         <br> Fill out our interest form <b> <a href="https://manuchopra.typeform.com/to/o3gPOo" target=_blank> here </a> </b>to get updated when the applications open.</p>
-<!--
-									<div class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-									</div>
--->
+                                    
 								</div>
 							</section>
 
@@ -134,8 +108,8 @@ will be roughly 3 hours a week, comprised of individual learning, work, and team
 							<section id="four">
 								<div class="container">
 									<h3>Stay in the loop</h3>
-									<p>Learn more about CS+Social Good at our website <b> <a href="http://www.cs4good.org" target=_blank> here </a> </b>. </p>
-									<form method="post" action="#">
+									<p>Fill out our interest form <b> <a href="https://manuchopra.typeform.com/to/o3gPOo" target=_blank> here </a> </b>to get updated when the applications open. Learn more about CS+Social Good at our website <b> <a href="http://www.cs4good.org" target=_blank> here </a> </b>. Have any questions about the class? Reach out to us via the contact form below.</p>
+									<form method="post" action="send-mail.php">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -511,7 +485,7 @@ will be roughly 3 hours a week, comprised of individual learning, work, and team
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; CS+Social Good. All rights reserved.</li><li>Design:HTML5 UP </li>
 							</ul>
 						</div>
 					</section>
